v. 0.6.4
- calculated spectra precision in txt files changed to e-4

v. 0.6.3
- fixed export error when not choosen, but all data were exported
- fixed export error when export occured after closing popup window
- fixed export error when enetgies were not exported to spearate txt files
- entry validation improved

v. 0.6.2
- solved some problems with corrupted files extraction
- added warning when files from mixed gaussian runs found
- fixed RuntimeError on overlaping actions
- fixed export popup error
- errors description moved to tslr_err_log.txt
- fixed ValueError on empty settings in gui_main.current_settings
- corrected session instantiation from files (unwanted files problem)
- changed energies precision to .6
- added Min. Boltzmann factor in GUI

v. 0.6.1
First beta relase

v. 0.6.0 =>
Early developement stages